csparql-core/src/main/java/eu/larkc/csparql/core/new_parser/CsparqlParser.java
/**
 * Copyright 2011-2015 DEIB - Politecnico di Milano
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * Acknowledgements:
 * We would like to thank Davide Barbieri, Emanuele Della Valle,
 * Marco Balduini, Soheila Dehghanzadeh, Shen Gao, and
 * Daniele Dell'Aglio for the effort in the development of the software.
 *
 * This work is partially supported by
 * - the European LarKC project (FP7-215535) of DEIB, Politecnico di
 * Milano
 * - the ERC grant â€œSearch Computingâ€� awarded to prof. Stefano Ceri
 * - the European ModaClouds project (FP7-ICT-2011-8-318484) of DEIB,
 * Politecnico di Milano
 * - the IBM Faculty Award 2013 grated to prof. Emanuele Della Valle;
 * - the City Data Fusion for Event Management 2013 project funded
 * by EIT Digital of DEIB, Politecnico di Milano
 * - the Dynamic and Distributed Information Systems Group of the
 * University of Zurich;
 * - INSIGHT NUIG and Science Foundation Ireland (SFI) under grant
 * No. SFI/12/RC/2289
 */
/* Generated By:JavaCC: Do not edit this line. CsparqlParser.java */
package eu.larkc.csparql.core.new_parser ;

import java.io.StringReader;
import java.util.Set;

import java.util.HashSet;
import eu.larkc.csparql.core.new_parser.utility_files.*;

public class CsparqlParser extends CsparqlParserBase implements CsparqlParserConstants {
private static int filter_count=0;
private static boolean filter_flag=false;
private static String sparqlQueryTranslated="PREFIX lld:   <http://linkeddata.com/ontology#> ";
private static boolean moleculeOn =false;
private static boolean previousOn =false;
private static String endSymbol="";
public static CsparqlParser createAndParse(String queryString) throws ParseException{
    CsparqlParser parser = new CsparqlParser(new StringReader(TextUtilities.queryTextEnhancer(queryString)));
//    System.out.println(TextUtilities.queryTextEnhancer(queryString));
    parser.Query();
    System.out.println();
    System.out.println("Translated Query:");
    System.out.println(sparqlQueryTranslated);
    System.out.println();
    return parser;
  }

  final public void Query() throws ParseException {
    RegisterClause();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PREFIX:
      case BASE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      //System.out.println("1: goto Prologue()");
      Prologue();
    }
    if (jj_2_1(5)) {
    	//System.out.println("2: goto SelectClause()");
      SelectClause();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTRUCT:
    	  //System.out.println("3: goto constructClause()");
        ConstructClause();
        break;
      case DESCRIBE:
    	  //System.out.println("4: goto describeClause()");
        DescribeClause();
        break;
      case ASK:
    	  //System.out.println("5: gotoAskClause()");
        AskClause();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FROM:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      if (jj_2_2(5)) {
    	  //System.out.println("6: goto FromClause()");
        FromClause();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FROM:
        	//System.out.println("7: FromStreamClause()");
          FromStreamClause();
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
    	//System.out.println("8: goto WhereClause()");
      WhereClause();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
  setSparqlQuery(sparqlQuery) ;
    jj_consume_token(0);
  }

  final public void Prologue() throws ParseException {
                    Token t;
    if (jj_2_4(2)) {
      t = jj_consume_token(PREFIX);
                                sparqlQuery = sparqlQuery + t.image ;
                      sparqlQueryTranslated = sparqlQueryTranslated + t.image;
                                
      label_3:
      while (true) {
        if (jj_2_3(2)) {
          t = jj_consume_token(SINGLELETTERTEXT);
                                   sparqlQuery = sparqlQuery + t.image ;
                                   sparqlQueryTranslated = sparqlQueryTranslated + t.image;
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NUMBERS:
            t = jj_consume_token(NUMBERS);
                                          sparqlQuery = sparqlQuery + t.image ;
                                          sparqlQueryTranslated = sparqlQueryTranslated + t.image;
            break;
          case SYMBOL:
            t = jj_consume_token(SYMBOL);
                           sparqlQuery = sparqlQuery + t.image ;
                           sparqlQueryTranslated = sparqlQueryTranslated + t.image;
            break;
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SINGLELETTERTEXT:
        case NUMBERS:
        case SYMBOL:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPACE:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        t = jj_consume_token(SPACE);
                               sparqlQuery = sparqlQuery + t.image ;
                               sparqlQueryTranslated = sparqlQueryTranslated + t.image;
      }
      t = jj_consume_token(IRIref);
                                 sparqlQuery = sparqlQuery + t.image ;
                                 sparqlQueryTranslated = sparqlQueryTranslated + t.image;
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BASE:
        t = jj_consume_token(BASE);
                     sparqlQuery = sparqlQuery + t.image ;
                     sparqlQueryTranslated = sparqlQueryTranslated + t.image;
        t = jj_consume_token(IRIref);
                                 sparqlQuery = sparqlQuery + t.image ;
                                 sparqlQueryTranslated = sparqlQueryTranslated + t.image;
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      t = jj_consume_token(SPACE);
                 sparqlQuery = sparqlQuery + t.image ;
                 sparqlQueryTranslated = sparqlQueryTranslated + t.image;
    }
    sparqlQuery = sparqlQuery + "\u005cn";
    sparqlQueryTranslated = sparqlQueryTranslated + "\u005cn";
  }

  final public void RegisterClause() throws ParseException {
                           Token t ; String queryName ="";
    if (jj_2_5(3)) {
      jj_consume_token(REGISTERSTREAM);
                       setOutputIsStream(true);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case REGISTERQUERY:
        jj_consume_token(REGISTERQUERY);
                       setOutputIsStream(false);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SINGLELETTERTEXT:
        t = jj_consume_token(SINGLELETTERTEXT);
                              queryName = queryName + t.image ;
        break;
      case NUMBERS:
        t = jj_consume_token(NUMBERS);
                                                                                    queryName = queryName + t.image ;
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
    }
    jj_consume_token(SPACE);
    jj_consume_token(AS);
          setCsparqlQueryName(queryName.trim());
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      jj_consume_token(SPACE);
    }
  }

  final public void AddClause() throws ParseException {
                     Token t;
    t = jj_consume_token(ADD);
              sparqlQuery = sparqlQuery + t.image ;
    label_8:
    while (true) {
      label_9:
      while (true) {
        if (jj_2_6(2)) {
          t = jj_consume_token(AS);
               sparqlQuery = sparqlQuery + t.image ;
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SINGLELETTERTEXT:
            t = jj_consume_token(SINGLELETTERTEXT);
                               sparqlQuery = sparqlQuery + t.image ;
            break;
          case SYMBOL:
            t = jj_consume_token(SYMBOL);
                     sparqlQuery = sparqlQuery + t.image ;
            break;
          case NUMBERS:
            t = jj_consume_token(NUMBERS);
                      sparqlQuery = sparqlQuery + t.image ;
            break;
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SINGLELETTERTEXT:
        case NUMBERS:
        case SYMBOL:
        case AS:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_9;
        }
      }
      t = jj_consume_token(SPACE);
                  sparqlQuery = sparqlQuery + t.image ;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case AS:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_8;
      }
    }
    sparqlQuery = sparqlQuery + "\u005cn";
  }

  final public void DescribeClause() throws ParseException {
                          Token t;
    t = jj_consume_token(DESCRIBE);
                   sparqlQuery = sparqlQuery + t.image ;
    label_10:
    while (true) {
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ADD:
          t = jj_consume_token(ADD);
                sparqlQuery = sparqlQuery + t.image ;
          break;
        case CONSTRUCT:
          t = jj_consume_token(CONSTRUCT);
                      sparqlQuery = sparqlQuery + t.image ;
          break;
        case SELECT:
          t = jj_consume_token(SELECT);
                   sparqlQuery = sparqlQuery + t.image ;
          break;
        case AS:
          t = jj_consume_token(AS);
                                                                        sparqlQuery = sparqlQuery + t.image ;
          break;
        case SINGLELETTERTEXT:
          t = jj_consume_token(SINGLELETTERTEXT);
                             sparqlQuery = sparqlQuery + t.image ;
          break;
        case SYMBOL:
          t = jj_consume_token(SYMBOL);
                   sparqlQuery = sparqlQuery + t.image ;
          break;
        case NUMBERS:
          t = jj_consume_token(NUMBERS);
                    sparqlQuery = sparqlQuery + t.image ;
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SELECT:
        case ADD:
        case CONSTRUCT:
        case SINGLELETTERTEXT:
        case NUMBERS:
        case SYMBOL:
        case AS:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_11;
        }
      }
      t = jj_consume_token(SPACE);
                sparqlQuery = sparqlQuery + t.image ;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECT:
      case ADD:
      case CONSTRUCT:
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case AS:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_10;
      }
    }
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_12;
      }
      t = jj_consume_token(SPACE);
                  sparqlQuery = sparqlQuery + t.image ;
    }
    sparqlQuery = sparqlQuery + "\u005cn";
  }

  final public void AskClause() throws ParseException {
                     Token t;
    t = jj_consume_token(ASK);
              sparqlQuery = sparqlQuery + t.image ;
              sparqlQueryTranslated = sparqlQueryTranslated + t.image;
    sparqlQuery = sparqlQuery + "\u005cn";
  }

  final public void SelectClause() throws ParseException {
                        Token t;
    t = jj_consume_token(SELECT);
                 sparqlQuery = sparqlQuery + t.image ;
                 sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case IRIref:
      case SPACE:
      case AS:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_13;
      }
      if (jj_2_7(3)) {
        t = jj_consume_token(SINGLELETTERTEXT);
                                       sparqlQuery = sparqlQuery + t.image ;
                                       sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SYMBOL:
          t = jj_consume_token(SYMBOL);
                               sparqlQuery = sparqlQuery + t.image ;
                               sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
          break;
        case NUMBERS:
          t = jj_consume_token(NUMBERS);
                                sparqlQuery = sparqlQuery + t.image ;
                                sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
          break;
        case IRIref:
          t = jj_consume_token(IRIref);
                                 sparqlQuery = sparqlQuery + t.image ;
                                 sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
          break;
        case SPACE:
          t = jj_consume_token(SPACE);
                              sparqlQuery = sparqlQuery + t.image ;
                              sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
          break;
        case AS:
          t = jj_consume_token(AS);
                           sparqlQuery = sparqlQuery + t.image ;
                           sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    sparqlQuery = sparqlQuery + "\u005cn";
    sparqlQueryTranslated = sparqlQueryTranslated + "\u005cn";
  }

  final public void ConstructClause() throws ParseException {
                           Token t;
    t = jj_consume_token(CONSTRUCT);
                      sparqlQuery = sparqlQuery + t.image ;
                      sparqlQueryTranslated = sparqlQueryTranslated + t.image;
                     // System.out.println(" at 1: "+t.image);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SINGLELETTERTEXT:
      case NUMBERS:
      case SYMBOL:
      case IRIref:
      case SPACE:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_14;
      }
      if (jj_2_8(3)) {
        t = jj_consume_token(SINGLELETTERTEXT);
                                       sparqlQuery = sparqlQuery + t.image ;
                                       sparqlQueryTranslated = sparqlQueryTranslated + t.image;
                                       //System.out.println(" at 2: "+t.image);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SYMBOL:
          t = jj_consume_token(SYMBOL);
                               sparqlQuery = sparqlQuery + t.image ;
                               sparqlQueryTranslated = sparqlQueryTranslated + t.image;
                               //System.out.println(" at 3: "+t.image);
          break;
        case NUMBERS:
          t = jj_consume_token(NUMBERS);
                                sparqlQuery = sparqlQuery + t.image ;
                                sparqlQueryTranslated = sparqlQueryTranslated + t.image;
                                //System.out.println(" at 4: "+t.image);
          break;
        case IRIref:
          t = jj_consume_token(IRIref);
                                 sparqlQuery = sparqlQuery + t.image ;
                                 sparqlQueryTranslated = sparqlQueryTranslated + t.image;
                                 //System.out.println(" at 5: "+t.image);
          break;
        case SPACE:
          t = jj_consume_token(SPACE);
                              sparqlQuery = sparqlQuery + t.image ;
                              sparqlQueryTranslated = sparqlQueryTranslated + t.image;
                              //System.out.println(" at 6: "+t.image);
          break;
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    sparqlQuery = sparqlQuery + "\u005cn";
    sparqlQueryTranslated = sparqlQueryTranslated + "\u005cn";
  }

  final public void FromClause() throws ParseException {
                      Token t;
    t = jj_consume_token(FROM);
               sparqlQuery = sparqlQuery + t.image ;
               sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
    //t = " " { s = s + t.image ; }
      //((t = <SINGLELETTERTEXT> { s = s + t.image ; } | t = <SYMBOL> { s = s + t.image ; })+ t = " " { s = s + t.image ; })+
       t = jj_consume_token(IRIref);
                    sparqlQuery = sparqlQuery + t.image ;
                    sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_15;
      }
      t = jj_consume_token(SPACE);
                  sparqlQuery = sparqlQuery + t.image ;
                  sparqlQueryTranslated = sparqlQueryTranslated + t.image ;
    }
    sparqlQuery = sparqlQuery + "\u005cn";
    sparqlQueryTranslated = sparqlQueryTranslated + "\u005cn";
  }

  final public void FromStreamClause() throws ParseException {
                             Token t ; String streamName =""; String s1 ="";
    Window window;
    jj_consume_token(FROM);
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAMED:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_16;
      }
      jj_consume_token(NAMED);
    }
    jj_consume_token(STREAM);
    t = jj_consume_token(IRIref);
                     streamName = t.image ;
    jj_consume_token(SPACE);
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_17;
      }
      jj_consume_token(SPACE);
    }
    jj_consume_token(RANGE);
    window = Window();
    jj_consume_token(SYMBOL);
    label_18:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_18;
      }
      jj_consume_token(SPACE);
    }
      StreamInfo si = new StreamInfo(streamName,window) ;
          addStreams(si);
  }

  final public Window Window() throws ParseException {
   Window window;
    if (jj_2_9(2)) {
      window = LogicalWindow();
                            {if (true) return window;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
      case TRIPLES:
        window = PhysicalWindow();
                               {if (true) return window;}
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public TimeUnit TimeUnit() throws ParseException {
                     Token t; String timeunit = "";
    label_19:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[30] = jj_gen;
        break label_19;
      }
      t = jj_consume_token(SPACE);
                         timeunit = timeunit + t.image ;
    }
    t = jj_consume_token(SINGLELETTERTEXT);
         timeunit = timeunit + t.image ;
        if(!timeunit.equals("ms") && !timeunit.equals("s") && !timeunit.equals("m") && !timeunit.equals("h") && !timeunit.equals("d"))
                {if (true) throw new ParseException();}
         {if (true) return TimeUnit.getUnitOfMeasure(timeunit);}
    throw new Error("Missing return statement in function");
  }

  final public TimeIntervalDescription WindowOverlap() throws ParseException {
                                         Token t; String tempStepValue = "";
   TimeIntervalDescription stepDescription = new TimeIntervalDescription();
  TimeUnit tm;
    label_20:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPACE:
        ;
        break;
      default:
        jj_la1[31] = jj_gen;
        break label_20;
      }
      t = jj_consume_token(SPACE);
    }
    if (jj_2_10(2)) {
      t = jj_consume_token(STEP);
      label_21:
      while (true) {
        t = jj_consume_token(NUMBERS);
                      tempStepValue = tempStepValue + t.image ;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUMBERS:
          ;
          break;
